route_table.tf
resource "aws_route_table" "main_route_table" {
  # 💡 以前インポートした VPC ID を参照
  vpc_id = aws_vpc.main_vpc.id

  # propagating_vgws, route, tags_all はすべて削除

  tags = {
    # 既存のルートテーブルにタグがあれば追記
  }
}

resource "aws_route" "default_route" {
  route_table_id         = aws_route_table.main_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.main_igw.id
}
